changes on bingo and pasapalabra

--- a/staff/abel-prieto/prework/PASAPALABRA HTML-CSS-JS/index.html
+++ b/staff/abel-prieto/prework/PASAPALABRA HTML-CSS-JS/index.html
@@ -70,8 +70,9 @@
 </section>
 
 <section class="controls">
-    <label class="answerd"></label>
-    <input type="text" name="patty" id="name" placeholder="Escribe tu respuesta">
+    <label class="answerd">
+        <input type="text" name="patty" id="name" placeholder="Escribe tu respuesta">
+    </label>
     <button class="okey">Enviar</button>
     <button class="pasapalabra">Pasapalabra</button>
     <button class="close" aria-label="Close">
