--- a/staff/anna-cuenca/frontend/app/index.html
+++ b/staff/anna-cuenca/frontend/app/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -29,7 +30,7 @@
     </div>
 
     <div id="login">
-        <h1>Register</h1>
+        <h1>Login</h1>
 
         <form>
 
@@ -43,7 +44,7 @@
 
         </form>
 
-        <a href="">Register</a>
+        <p> <a href="">Register</a></p>
 
 
     </div>
