--- a/staff/isabel-dominguez/frontend/app/index.html
+++ b/staff/isabel-dominguez/frontend/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="register">
@@ -19,7 +20,7 @@
             <label for="password">Password</label>
             <input id="password" type="password">
 
-            <button>Register</button>
+            <button id="link">Register</button>
         </form>
 
         <a href="">Login</a>
