add login and register user

--- a/staff/isabel-dominguez/frontend/app/index.html
+++ b/staff/isabel-dominguez/frontend/app/index.html
@@ -20,7 +20,7 @@
             <label for="password">Password</label>
             <input id="password" type="password">
 
-            <button id="link">Register</button>
+            <button>Register</button>
         </form>
 
         <a href="">Login</a>
