--- a/staff/manuel-barzi/frontend/app/index.html
+++ b/staff/manuel-barzi/frontend/app/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>App</title>
 </head>
 
 <body>
@@ -41,6 +41,10 @@
         </form>
 
         <a href="">Register</a>
+    </div>
+
+    <div id="home">
+        <h1>Hello, Home!</h1>
     </div>
 
     <script src="main.js"></script>
