add login and register

--- a/staff/eneko-fernandez/frontend/app/index.html
+++ b/staff/eneko-fernandez/frontend/app/index.html
@@ -37,6 +37,10 @@
 
             <a href>Register</a>
         </div>
+
+        <div id="home">
+            <h1></h1>
+        </div>
         <script src="main.js"></script>
     </body>
 </html>
