--- a/staff/anna-cuenca/frontend/app/index.html
+++ b/staff/anna-cuenca/frontend/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>App</title>
 </head>
 <body>
     <div id="register">
@@ -48,6 +48,11 @@
 
 
     </div>
+
+    <div id="home">
+        <h1>Hello, Home!</h1>
+    </div>
+
 
 
     <script src="main.js"></script>
