update user login register

--- a/staff/tano-aleu/frontend/app/index.html
+++ b/staff/tano-aleu/frontend/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>App</title>
 </head>
 
 
@@ -19,7 +19,7 @@
                <input id="email" type="email">
 
                <label for="password">Password</label>
-               <input type="password" id="password">
+               <input id="password" type="password" >
 
                <button>Register</button>
 
@@ -37,7 +37,7 @@
              <input id="email" type="email">
 
              <label for="password">Password</label>
-             <input type="password" id="password">
+             <input id="password" type="password" >
 
              <button>Login</button>
         </form>
@@ -46,8 +46,15 @@
 
    </div>    
 
-     <script scr="main.js"></script>
+   <div id="home">
+
+    <h1>Hello, Home</h1>
+
+   </div>
+
+   <script src="main.js"></script>
 </body>
+
 
 
 </html>
