--- a/staff/belen-ivars/frontend/app/index.html
+++ b/staff/belen-ivars/frontend/app/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <div>
-        <h1> Register</h1>
+    <div id="register">
+        <h1>Register</h1>
+
         <form>
             <label for="name">Name</label>
             <input id="name" type="text">
@@ -16,24 +19,33 @@
             <input id="email" type="email">
 
             <label for="password">Password</label>
-            <input id="paswword" type="password">
+            <input type="password" id="password">
+
+            <button>Register</button>
 
         </form>
+        <a href="">Login</a>
     </div>
 
-    <div>
-        <h1> Login</h1>
+    <div id="login">
+        <h1>Login</h1>
+
         <form>
+
             <label for="email">E-mail</label>
             <input id="email" type="email">
 
             <label for="password">Password</label>
-            <input id="paswword" type="password">
+            <input type="password" id="password">
+
+            <button>Login</button>
 
         </form>
+
         <a href="">Register</a>
+
     </div>
     <script src="main.js"></script>
-
 </body>
+
 </html>
