--- a/staff/luis-felipe-garcia/frontend/app/index.html
+++ b/staff/luis-felipe-garcia/frontend/app/index.html
@@ -11,18 +11,18 @@
 
         <form>
             <label for="name">Name</label>
-            <input type="name" type="text">
+            <input id="name" type="text">
 
             <label for="email">E-mail</label>
             <input id="email" type="email">
 
             <label for="password">Password</label>
-            <input type="password" type="password">
+            <input id="password" type="password">
 
             <button>Register</button>
-            <a href="">Login</a>
-
+            
         </form>
+        <a href="">Login</a>
     </div>
 
     <div id = "login">
@@ -34,13 +34,22 @@
             <input id="email" type="email">
 
             <label for="password">Password</label>
-            <input type="password" type="password">
+            <input id="password" type="password">
 
             <button>Login</button>
-            <a href="">Register</a>
-
+            
         </form>
+        <a href="">Register</a>
     </div>
+    <div id = 'home'>
+        <h1>This is home page</h1>
+
+    </div>
+
+
+
+
+
     <script src="main.js"></script>
 </body>
 </html>
