save change register

--- a/staff/josem-cembrano/frontend/app/index.htm
+++ b/staff/josem-cembrano/frontend/app/index.htm
@@ -19,7 +19,7 @@
             <input id="email" type="email">
 
             <label for="password">Password</label>
-            <input type="password" id="password">
+            <input id="password" type="password">
 
             <button>Register</button>
         </form>
