Implement log in functionality

--- a/staff/isabel-dominguez/frontend/app/index.html
+++ b/staff/isabel-dominguez/frontend/app/index.html
@@ -23,14 +23,13 @@
             <button>Register</button>
         </form>
 
-        <a href="">Login</a>
+        <a href="">Log in</a>
     </div>
 
     <div id="login">
-        <h1>Login</h1>
+        <h1>Log in</h1>
 
         <form>
-
             <label for="email">E-mail</label>
             <input id="email" type="email">
 
@@ -41,6 +40,10 @@
         </form>
 
         <a href="">Register</a>
+    </div>
+    
+    <div id="home">
+        <h1>Hello, Home!</h1>
     </div>
 
     <script src="main.js"></script>
