Show user name logged

--- a/staff/isabel-dominguez/frontend/app/index.html
+++ b/staff/isabel-dominguez/frontend/app/index.html
@@ -43,9 +43,10 @@
     </div>
     
     <div id="home">
-        <h1>Hello, Home!</h1>
+        <h1>Welcome to the Home Page</h1>
+        <p id="username"></p>
     </div>
-
+    
     <script src="main.js"></script>
 </body>
 </html>
