--- a/staff/luis-felipe-garcia/frontend/app/index.html
+++ b/staff/luis-felipe-garcia/frontend/app/index.html
@@ -23,6 +23,7 @@
             
         </form>
         <a href="">Login</a>
+        <h2 id = "invalid_user">Mail existente - usuario registrado.</h2>
     </div>
 
     <div id = "login">
@@ -40,15 +41,12 @@
             
         </form>
         <a href="">Register</a>
+        <h2 id = "user_dont_exist">Usuario y/o contraseña erróneos.</h2>
     </div>
     <div id = 'home'>
-        <h1>This is home page</h1>
+        <h1>Home page</h1>
 
     </div>
-
-
-
-
 
     <script src="main.js"></script>
 </body>
