--- a/staff/abel-prieto/FRONTEND/APP/index.html
+++ b/staff/abel-prieto/FRONTEND/APP/index.html
@@ -4,53 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="main.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <!--ICONO HTML <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">--> 
     <title>Register user</title>
 </head>
 
 <body>
 
-
     <div id="register">
         <h1>Sign Up</h1>
         <p><em>Create an account:</em></p>
 
-        <label for="username">Username</label>
-        <input id="username_register" type="text">
+        <form>
+        <label for="username">Name</label>
+        <input id="username" type="text">
 
         <br>
 
         <label for="email">Email</label>
-        <input id="email_register" type="text">
+        <input id="email" type="text">
 
         <br>
 
         <label for="password">Password</label>
-        <input id="password_register" type="password">
-
-        <br>
-
-        <a href="">Sign Up</a>
-
-        <br>
-
-        <button id="register_button">Register</button>
-
-
-    </div>
-
-
-    <div id="login">
-        <h1>Log In</h1>
-        <p><em>Introduce your email and password:</em></p>
-
-        <label for="email">Email</label>
-        <input id="email_login" type="text">
-
-        <br>
-
-        <label for ="password">Password</label>
-        <input id="password_login" type="password">
+        <input id="password" type="password">
 
         <br>
 
@@ -58,9 +36,38 @@
 
         <br>
 
-        <button id="login_button">Login</button>
+        <button id="register_button">Register</button>
+        </form>
     </div>
 
-    <script src="main.js"></script>
+    <div id="login">
+        <h1>Log In</h1>
+        <p><em>Introduce your email and password:</em></p>
+
+        <form>
+        <label for="email">Email</label>
+        <input id="email" type="text">
+
+        <br>
+
+        <label for ="password">Password</label>
+        <input id="password" type="password">
+
+        <br>
+
+        <a href="">Register</a> 
+
+        <br>
+
+        <button id="login_button">Login</button>
+        </form>
+    </div>
+    
+
+    <div id="home">
+        <h1>HOME PAGE</h1>
+        <p id="user_logged"></p>
+    </div>
+
 </body>
 </html>
