add exit button on login

--- a/staff/abel-prieto/FRONTEND/APP/index.html
+++ b/staff/abel-prieto/FRONTEND/APP/index.html
@@ -69,5 +69,11 @@
         <p id="user_logged"></p>
     </div>
 
+
+    <div id="exit">
+        <button id="exit_button">❌Log Out</button>
+    </div>
+
+
 </body>
 </html>
