add favicon and modify files

--- a/staff/abel-prieto/FRONTEND/APP/index.html
+++ b/staff/abel-prieto/FRONTEND/APP/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="main.js" defer></script>
     <link rel="stylesheet" href="style.css">
-    <!--ICONO HTML <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">--> 
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Register user</title>
 </head>
 
@@ -63,7 +63,6 @@
         </form>
     </div>
     
-
     <div id="home">
         <h1>HOME PAGE</h1>
         <p id="user_logged"></p>
