--- a/staff/abel-prieto/FRONTEND/APP/index.html
+++ b/staff/abel-prieto/FRONTEND/APP/index.html
@@ -7,7 +7,7 @@
     <script src="main.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Register user</title>
+    <title>ISDI Page</title>
 </head>
 
 <body>
@@ -17,18 +17,18 @@
         <p><em>Create an account:</em></p>
 
         <form>
-        <label for="username">Name</label>
-        <input id="username" type="text">
+        <label for="username">👤</label>
+        <input id="username" type="text" placeholder="Username">
 
         <br>
 
-        <label for="email">Email</label>
-        <input id="email" type="text">
+        <label for="email">✉️</label>
+        <input id="email" type="text" placeholder="Entry your email">
 
         <br>
 
-        <label for="password">Password</label>
-        <input id="password" type="password">
+        <label for="password">🔒</label>
+        <input id="password" type="password" placeholder="Choose your password">
 
         <br>
 
@@ -45,17 +45,17 @@
         <p><em>Introduce your email and password:</em></p>
 
         <form>
-        <label for="email">Email</label>
-        <input id="email" type="text">
+        <label for="email">✉️</label>
+        <input id="email" type="text" placeholder="Email">
 
         <br>
 
-        <label for ="password">Password</label>
-        <input id="password" type="password">
+        <label for ="password">🔒</label>
+        <input id="password" type="password" placeholder="Password">
 
         <br>
 
-        <a href="">Register</a> 
+        <a href="">Registre</a> 
 
         <br>
 
