--- a/staff/eneko-fernandez/frontend/app/index.html
+++ b/staff/eneko-fernandez/frontend/app/index.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
         <title>Document</title>
     </head>
     <body>
         <div id="register">
             <h1>Register</h1>
-            <form>
+            <form class="form">
                 <label for="name">Name</label>
                 <input id="name" type="text">
 
@@ -25,7 +26,7 @@
 
         <div id="login">
             <h1>Login</h1>
-            <form>
+            <form class="form">
                 <label for="email">E-mail</label>
                 <input id="email" type="email">
 
