--- a/staff/tano-aleu/frontend/app/index.html
+++ b/staff/tano-aleu/frontend/app/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>App</title>
 </head>
 
@@ -16,10 +17,10 @@
                <input id="name" type="text">
 
                <label for="email">E-mail</label>
-               <input id="email" type="email">
+               <input id="registerEmail" type="email">
 
                <label for="password">Password</label>
-               <input id="password" type="password" >
+               <input id="registerPassword" type="password" >
 
                <button>Register</button>
 
@@ -34,10 +35,10 @@
 
         <form>
              <label for="email">E-mail</label>
-             <input id="email" type="email">
+             <input id="loginEmail" type="email">
 
              <label for="password">Password</label>
-             <input id="password" type="password" >
+             <input id="loginPassword" type="password" >
 
              <button>Login</button>
         </form>
@@ -48,13 +49,12 @@
 
    <div id="home">
 
-    <h1>Hello, Home</h1>
+    <h1>Homepage</h1>
+    <p id="username"></p>
 
    </div>
 
    <script src="main.js"></script>
 </body>
-
-
 
 </html>
