Modified the title and add new background

--- a/staff/ivan-vallejos/frontend/app/index.html
+++ b/staff/ivan-vallejos/frontend/app/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-  <title> Login </title>
+  <title> Navigator</title>
 </head>
 
 <body>
@@ -64,7 +64,20 @@
       <p>Don't have an account? <a href="register">Create one!</a></p> 
 
     </form>
-  
+  </div>
+
+  <div id="home">
+    <section>
+      <nav><button> Log Out <i class="fa-solid fa-right-from-bracket"></i></button></nav>
+      <h1> Home Page </h1>
+      <p> Welcome User </p>
+      
+
+    </section>
+  </div>
+
+
+
 </body>
 
 </html>
