--- a/staff/edgar-moreno/frontend/app/index.html
+++ b/staff/edgar-moreno/frontend/app/index.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- Linked Local Scripts-->
+    <link rel="stylesheet" href="style.css">
+    <!--FONTS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@400;700&family=Quicksand:wght@300;400;700&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
-    <div id = "register">
+    <div id="register">
         <h1>Register</h1>
 
         <form>
             <label for="name">Name</label>
-            <input type="name" type="text">
+            <input  id="name" type="name" type="text">
 
             <label for="email">E-mail</label>
             <input id="email" type="email">
 
             <label for="password">Password</label>
-            <input type="password" type="password">
+            <input id="password" type="password">
 
-            <button>Register</button>
+            <button class="button_register">Register</button>
             <a href="">Login</a>
 
         </form>
     </div>
 
-    <div id = "login">
+    <div id="login">
         <h1>Login</h1>
 
         <form>
@@ -41,6 +51,10 @@
 
         </form>
     </div>
+    <div id="home">
+        <h1>HELLO, HOME!</h1>
+    </div>
     <script src="main.js"></script>
 </body>
+
 </html>
