First steps with css

--- a/staff/luis-felipe-garcia/frontend/app/index.html
+++ b/staff/luis-felipe-garcia/frontend/app/index.html
@@ -34,10 +34,10 @@
         <form>
            
             <label for="email">E-mail</label>
-            <input id="email" type="email">
+            <input id="email" type="email" value = 'example@dom.com'>
 
             <label for="password">Password</label>
-            <input id="password" type="password">
+            <input id="password" type="password" value = 'ABCdef123-¿?'>
 
             <button>Login</button>
             
