modify files from class

--- a/staff/abel-prieto/FRONTEND/APP/index.html
+++ b/staff/abel-prieto/FRONTEND/APP/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="main.js" defer></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"><!-->
     <title>ISDI Page</title>
 </head>
 
@@ -14,21 +14,20 @@
 
     <div id="register">
         <h1>Sign Up</h1>
-        <p><em>Create an account:</em></p>
 
         <form>
-        <label for="username">👤</label>
-        <input id="username" type="text" placeholder="Username">
+        <label for="username">Username</label>
+        <input id="username" type="text">
 
         <br>
 
-        <label for="email">✉️</label>
-        <input id="email" type="text" placeholder="Entry your email">
+        <label for="email">Email</label>
+        <input id="email" type="text">
 
         <br>
 
-        <label for="password">🔒</label>
-        <input id="password" type="password" placeholder="Choose your password">
+        <label for="password">Password</label>
+        <input id="password" type="password">
 
         <br>
 
@@ -42,16 +41,15 @@
 
     <div id="login">
         <h1>Log In</h1>
-        <p><em>Introduce your email and password:</em></p>
 
         <form>
-        <label for="email">✉️</label>
-        <input id="email" type="text" placeholder="Email">
+        <label for="email">Email</label>
+        <input id="email" type="text">
 
         <br>
 
-        <label for ="password">🔒</label>
-        <input id="password" type="password" placeholder="Password">
+        <label for ="password">Password</label>
+        <input id="password" type="password">
 
         <br>
 
@@ -65,12 +63,6 @@
     
     <div id="home">
         <h1>HOME PAGE</h1>
-        <p id="user_logged"></p>
-    </div>
-
-
-    <div id="exit">
-        <button id="exit_button">❌Log Out</button>
     </div>
 
 
