Modify the style, and the funcionality

--- a/staff/ivan-vallejos/frontend/app/index.html
+++ b/staff/ivan-vallejos/frontend/app/index.html
@@ -37,7 +37,7 @@
       <input placeholder="Password" id="password" type="password">
       </label>
 
-      <button class="button-login"> Submit </button>
+      <button class="button-register"> Submit </button>
       <p> Already a user? <a href="register"> Log in!</a></p> 
 
     </form>
