--- a/staff/josem-cembrano/frontend/app-rework/index.html
+++ b/staff/josem-cembrano/frontend/app-rework/index.html
@@ -4,48 +4,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>App</title>
+    <title>Registro e Inicio de Sesión</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favihack.ico" type="image/x-icon">
+
 </head>
 
 <body>
     <div id="register">
         <h1>Register</h1>
 
-        <form>
-            <label for="name">Name</label>
-            <input id="name" type="text">
+        <form id="registerForm">
+            <label for="name"><b>Name</b></label>
+            <input id="name" type="text" required>
 
-            <label for="email">E-mail</label>
-            <input id="email" type="email">
+            <label for="email"><b>Email</b></label>
+            <input id="email" type="email" required>
 
-            <label for="password">Password</label>
-            <input type="password" id="password">
+            <label for="password"><b>Pasword</b></label>
+            <input id="password" type="password" required>
 
-            <button>Register</button>
+            <button type="submit"><i>Register</i></button>
         </form>
 
-        <a href="">Login</a>
+        <a href="#" id="registerLoginLink">Inicia sesión</a>
     </div>
 
     <div id="login">
-        <h1>Login</h1>
+        <h1>login</h1>
 
-        <form>
-            <label for="email">E-mail</label>
-            <input id="email" type="email">
+        <form id="loginForm">
+            <label for="loginEmail"><b>Email</b></label>
+            <input id="loginEmail" type="email" required>
 
-            <label for="password">Password</label>
-            <input type="password" id="password">
+            <label for="loginPassword"><b>Pasword</b></label>
+            <input id="loginPassword" type="password" required>
 
-            <button>Login</button>
+            <button type="submit"><i>Let's Go!</i></button>
         </form>
 
-        <a href="">Register</a>
+        <a href="#" id="loginRegisterLink"><b><i>Regístrate</i></b></a>
     </div>
 
-    <div id="home">
-        <h1>Hello, Home!</h1>
+    <div id="home" style="display: none;">
+        <h1><i>Carpe Diem</i></h1>
+        <!-- Contenido de la página de bienvenida -->
     </div>
+
     <script src="main.js"></script>
 </body>
 
