--- a/staff/eneko-fernandez/frontend/app/index.html
+++ b/staff/eneko-fernandez/frontend/app/index.html
@@ -42,6 +42,8 @@
         <div id="home">
             <h1></h1>
         </div>
+        <script src="data.js"></script>
+        <script src="logic.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
