--- a/staff/isabel-dominguez/frontend/app/index.html
+++ b/staff/isabel-dominguez/frontend/app/index.html
@@ -41,12 +41,13 @@
 
         <a href="">Register</a>
     </div>
-    
+
     <div id="home">
-        <h1>Welcome to the Home Page</h1>
-        <p id="username"></p>
+        <h1>Hello, Home!</h1>
     </div>
-    
+
+    <script src="data.js"></script>
+    <script src="logic.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
