--- a/staff/tano-aleu/frontend/app/index.html
+++ b/staff/tano-aleu/frontend/app/index.html
@@ -55,6 +55,8 @@
    </div>
 
    <script src="main.js"></script>
+   <script src="logic.js"></script>
+   <script src="data.js"></script>
 </body>
 
 </html>
