--- a/staff/abel-prieto/FRONTEND/APP/APP.2/index.html
+++ b/staff/abel-prieto/FRONTEND/APP/APP.2/index.html
@@ -18,8 +18,8 @@
         <h1>Sign Up</h1>
 
         <form>
-        <label for="username">Username</label>
-        <input id="username" type="text">
+        <label for="name">Username</label>
+        <input id="name" type="text">
 
         <br>
 
