edit files main, logic, data

--- a/staff/josem-cembrano/frontend/app/index.html
+++ b/staff/josem-cembrano/frontend/app/index.html
@@ -47,9 +47,9 @@
         <h1>Hello, Home!</h1>
     </div>
 
-    <script src="data.js"></script>
-    <script src="logic.js"></script>
-    <script src="main.js"></script>
+    <script src="data.js"></script><!--1-->
+    <script src="logic.js"></script><!--2-->
+    <script src="main.js"></script><!--3-->
 </body>
 
 </html>
