improvement app and To Do

--- a/staff/josem-cembrano/frontend/app/index.html
+++ b/staff/josem-cembrano/frontend/app/index.html
@@ -45,7 +45,14 @@
 
     <div id="home">
         <h1>Hello, Home!</h1>
+
+        <!-- TODO implement logout <button>Logout</button> (onclick) -->
+
+        <!-- TODO implement change email panel (form) -->
+
+        <!-- TODO implement change password panel (form) -->
     </div>
+    <script src="validators"></script><!--Validadores para ayudar al DEV-->
 
     <script src="data.js"></script><!--1-->
     <script src="logic.js"></script><!--2-->
