work todo in apprework file

--- a/staff/josem-cembrano/frontend/app/index.html
+++ b/staff/josem-cembrano/frontend/app/index.html
@@ -45,6 +45,10 @@
 
     <div id="home">
         <h1>Hello, Home!</h1>
+        <div class="Logout">
+            <br>
+            <buttom class="btn"><a href="">Logout</a></buttom>
+        </div>
 
         <!-- TODO implement logout <button>Logout</button> (onclick) -->
 
@@ -52,11 +56,12 @@
 
         <!-- TODO implement change password panel (form) -->
     </div>
-    <script src="validators"></script><!--Validadores para ayudar al DEV-->
 
-    <script src="data.js"></script><!--1-->
-    <script src="logic.js"></script><!--2-->
-    <script src="main.js"></script><!--3-->
+    <script src="validators.js"></script>
+
+    <script src="data.js"></script>
+    <script src="logic.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
