optimise register process; implement login process

--- a/staff/ana-delrio/frontend/app/index.html
+++ b/staff/ana-delrio/frontend/app/index.html
@@ -11,15 +11,14 @@
         <h1>Register</h1>
 
         <form>
-            <label>for="name">Name</label>
+            <label for="name">Name</label>
             <input id="name" type="text">
 
             <label for="email">E-mail</label>
-            <input id="email" type="email"
+            <input id="email" type="email">
 
             <label for="password">password</label>
-            <input type ="password"
-            id="password"
+            <input type ="password" id="password">
             
             <button>Register</button>
         </form>
@@ -32,7 +31,7 @@
     <h1>Login</h1>
 
         <form>
-            <label>for="email">E-mail</label>
+            <label for="email">E-mail</label>
             <input id="email" type="email">
 
             <label for="password">password</label>
@@ -44,6 +43,9 @@
         <a href="">Register</a>
 
 </div>
+    <div id="home">
+        <h1>Hello, Home!</h1>
+    </div>
 
     <script src="main.js"></script>
 
