--- a/staff/belen-ivars/frontend/app/index.html
+++ b/staff/belen-ivars/frontend/app/index.html
@@ -24,6 +24,7 @@
             <button>Register</button>
 
         </form>
+        
         <a href="">Login</a>
     </div>
 
@@ -45,6 +46,61 @@
         <a href="">Register</a>
 
     </div>
+
+    <div id="home">
+        <h1>Hello, Home!</h1>
+        
+        <button>Logout</button>
+
+        <a href="">Settings</a>
+
+        <!-- TODO implement logout  (onclick)--> 
+
+<!-- TODO implement change email panel (form : onsubmit)-->
+<!-- TODO implement change password panel (form : onsubmit)-->
+
+    </div>
+
+    <div id="settings">
+        <h1>Settings</h1>
+
+        <h2> Change email</h2>
+
+        <form id="'change email">
+
+            <label for="email">Current e-mail</label>
+            <input id="current email" type="email">
+
+            <label for="email">New e-mail</label>
+            <input id="new email" type="email">
+
+            <button>Change email</button>
+
+
+        </form>
+
+        <h2> Change password</h2>
+
+        <form id="'change password">
+
+            <label for="current password">Current password</label>
+            <input type="password" id="current password">
+
+            <label for="new password">New password</label>
+            <input type="password" id="nwe password">
+
+            <label for="new password">New password again</label>
+            <input type="password" id="new password repeat">
+
+            <button>Change password</button>
+
+        </form>
+
+    </div>
+
+    <script src="validators.js"></script>
+    <script src="data.js"></script>
+    <script src="logic.js"></script>
     <script src="main.js"></script>
 </body>
 
