edit and creat files

--- a/staff/josem-cembrano/frontend/app-rework/index3.html
+++ b/staff/josem-cembrano/frontend/app-rework/index3.html
@@ -10,10 +10,10 @@
     <div id="changeCredentials">
         <h3>Security Settings</h3>
         <form>
-            <label for="changeEmail">new email</label>
+            <label for="changeEmail">new password</label>
             <input id="changeEmail" type="text">
             <br>
-            <label for="changepassword">repeat new email</label>
+            <label for="changepassword">repeat new password</label>
             <input type="changepassword" id="password">
         </form>
         <a href="">Logout</a>
