--- a/staff/josem-cembrano/frontend/app-rework/index.html
+++ b/staff/josem-cembrano/frontend/app-rework/index.html
@@ -47,8 +47,10 @@
         <h1>Hello, Home!</h1>
         <div id="settings">
             <h3>Setting Account</h3>
-            <a href="pagina2.html"><button>Privacy</button></a>
+            <a href="index2.html"><button>Change Email</button></a><br>
+            <a href="index2.html"><button>Change Register</button></a>
             <br><br><br>
+            <a href="">Logout</a>
         </div>
 
     <script src="validators.js"></script>
