edit code html and css

--- a/staff/josem-cembrano/frontend/app-rework/index3.html
+++ b/staff/josem-cembrano/frontend/app-rework/index3.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Settings Privacy</title>
 </head>
 <body>
@@ -10,13 +11,13 @@
     <div id="changeCredentials">
         <h3>Security Settings</h3>
         <form>
-            <label for="changeEmail">new password</label>
-            <input id="changeEmail" type="text">
-            <br>
-            <label for="changepassword">repeat new password</label>
+            <label for="changeEmail">•new password</label>
+            <input id="changeEmail" type="text"><br>
+            <label for="changepassword">•repeat new password</label>
             <input type="changepassword" id="password">
         </form>
-        <a href="">Logout</a>
+        <br>
+        <a href=""><em>back</em></a>
     </div>
     
     <script src="validators.js"></script>
