--- a/staff/josem-cembrano/frontend/app-rework/index.html
+++ b/staff/josem-cembrano/frontend/app-rework/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>App</title>
 </head>
 
@@ -14,41 +15,41 @@
         <form>
             <label for="name">Name</label>
             <input id="name" type="text">
-
+            <br>
             <label for="email">E-mail</label>
             <input id="email" type="email">
-
+            <br>
             <label for="password">Password</label>
             <input type="password" id="password">
-
+            <br><br>
             <button>Register</button>
+            <br>
         </form>
+        <br>
 
         <a href="">Login</a>
     </div>
 
     <div id="login">
         <h1>Login</h1>
-
         <form>
             <label for="email">E-mail</label>
-            <input id="email" type="email">
-
+            <input id="email" type="email"><br>
             <label for="password">Password</label>
             <input type="password" id="password">
-
+            <br><br>
             <button>Login</button>
         </form>
-
-        <a href="">Register</a>
+        <br><br>
+        <a href=""><em>Register</em></a>
     </div>
 
     <div id="home">
         <h1>Hello, Home!</h1>
         <div id="settings">
             <h3>Setting Account</h3>
-            <a href="index2.html"><button>Change Email</button></a><br>
-            <a href="index2.html"><button>Change Register</button></a>
+            <a href="index2.html"><button><em>Change Email</b></button></a><br>
+            <a href="index2.html"><button><em>Change Register</b></button></a>
             <br><br><br>
             <a href="">Logout</a>
         </div>
