edit few files todo app

--- a/staff/josem-cembrano/frontend/app-rework/index.html
+++ b/staff/josem-cembrano/frontend/app-rework/index.html
@@ -46,13 +46,16 @@
 
     <div id="home">
         <h1>Hello, Home!</h1>
-        <div id="settings">
             <h3>Setting Account</h3>
-            <a href="index2.html"><button><em>Change Email</b></button></a><br>
-            <a href="index2.html"><button><em>Change Register</b></button></a>
+            <a id="privacity" href=""><button><em>Change Credentials</b></button></a>
+    </div>
+
+    <div id="settings">
+            <a id="changeEmail" href=""><button><em>Change Email</b></button></a><br>
+            <a id="changePassword" href=""><button><em>Change password</b></button></a>
             <br><br><br>
             <a href="">Logout</a>
-        </div>
+    </div>
 
     <script src="validators.js"></script>
 
