--- a/staff/josem-cembrano/frontend/app-rework/index3-.html
+++ b/staff/josem-cembrano/frontend/app-rework/index3-.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <div id="changeCredentials">
+    <div id="changeCredentials1">
         <h3>Security Settings</h3>
         <form>
             <label for="changeEmail">•new password</label>
