refactor register and login functionatlities

--- a/staff/judy-grayland/frontend/app.1/index.html
+++ b/staff/judy-grayland/frontend/app.1/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="register">
     <h1>Register</h1>
-    
+    <p id="register-errormsg">This user already exists</p><br>
     <form>
       <label for="name">Name:</label>
       <input type="text" id="name"><br>
@@ -28,7 +28,7 @@
 
    <div id="login">
     <h1>Log in</h1>
-    
+    <p id="login-errormsg">Incorrect user or password</p><br>
     <form>
       <label for="email">Email:</label>
       <input type="email" id="email"><br>
@@ -44,8 +44,7 @@
   <div id="home">
     <h1>Hello, Home!</h1>
   </div>
-  <script src="data.js"></script>
-  <script src="logic.js"></script>
+
   <script src="main.js"></script>
 </body>
 </html>
