Paneles de cambio

--- a/staff/belen-garnica/frontend/app copy/index.html
+++ b/staff/belen-garnica/frontend/app copy/index.html
@@ -46,29 +46,32 @@
     <div id="home">
         <h1>Hello, Home!</h1>
 
+        <h2> Change email</h2>
         <form>
             <label for="email">Actual email</label>
             <input id="email" type="email">
 
             <label for="newEmail">New email</label>
-            <input type="newEmail" id="newEmail">
+            <input type="email" id="newEmail">
 
             <button>Change email</button>
         </form>
 
+        <h2>Change password</h2>
         <form>
             <label for="password">Actual password</label>
             <input id="password" type="password">
 
             <label for="newPassword">New password</label>
-            <input type="newPassword" id="newPassword">
+            <input type="Password" id="newPassword">
 
             <label for="confirmPassword">Confirm new password</label>
-            <input type="confirmPassword" id="confirmPassword">
+            <input type="Password" id="confirmPassword">
 
             <button>Change password</button>
         </form>
 
+        <h4>See you soon!</h4>
         <form>
             <button>Logout</button>
         </form>
