add account settings and change email form

--- a/staff/judy-grayland/frontend/app/index.html
+++ b/staff/judy-grayland/frontend/app/index.html
@@ -44,13 +44,13 @@
     <div id="home">
       <h1>Hello, Home!</h1>
 
-      <!-- <div id="accountSettings">
+      <div id="accountSettings">
         <form id="changeEmail">
-          <label for="old-email">Current mail:</label>
+          <label for="old-email">Current email:</label>
           <input type="email" id="old-email" /><br />
           <label for="new-email">New email:</label>
           <input type="email" id="new-email" /><br />
-          <label for="new-email">Confirm new email:</label>
+          <label for="new-email-confirm">Confirm new email:</label>
           <input type="email" id="new-email-confirm" /><br />
           <button id="change-email-btn">Save</button>
         </form>
@@ -65,7 +65,7 @@
         </form>
       </div>
       <a href="">Account settings</a>
-      <button id="logout-btn">Log out</button> -->
+      <button id="logout-btn">Log out</button>
 
       <!-- DONE: TODO implement logout <button>Log out</button> onclick-->
       <!-- TODO formulario/panel (aparecer con click) para que el usuario que te deja cambiar credenciales. Por un lado el email en un formulario, por otro el password en otro email:
