--- a/staff/cristian-rubert/frontend/app/index.html
+++ b/staff/cristian-rubert/frontend/app/index.html
@@ -45,24 +45,26 @@
     </div>
 
     <div id="home">
+        
         <h1>Hello, Home!</h1>
 
-        <button id="newmail">changepassword</button>
-        <button id="newpassword">changepassword</button>
+        <button id="newmail">Change Email</button>
+        <button id="newpassword">Change Password</button>
         <hr>
         <button id="logout">Logout</button>
 
     </div>   
 
     <div id="changemail">
+        <h1>Change Email</h1>
         <a href="">Change Email</a>
 
         <form>
             <label for="email">Old E-mail</label>
             <input id="email" type="email">
 
-            <label for="email2">New Password</label>
-            <input type="email" id="password2">
+            <label for="email2">New E-mail</label>
+            <input type="email" id="email2">
 
             <button id="confirmail">Submit</button>
         </form>
@@ -70,6 +72,7 @@
     </div>
         
     <div id="changepassword">
+        <h1>Change Password</h1>
         <a href="">Change Password</a>
 
         <form>
