--- a/staff/luis-felipe-garcia/frontend-manu-literal/app.1/index.html
+++ b/staff/luis-felipe-garcia/frontend-manu-literal/app.1/index.html
@@ -45,14 +45,7 @@
 
     <div id="home">
         <h1>Hello, Home!</h1>
-        <nav>
-            <ul>
-                <li id="change-email-link"><a href="">Change mail</a></li>
-                <li id="change-password-link"><a href="">Change password</a></li>
-                <li id="logout-link"><a href="">Logout</a></li>
-            </ul>
-        </nav>
-<!--        <button id="logout-button">Logout</button>-->
+        <button>Logout</button>
         <form id="change-password-form">
             <label for="current-password">Current password</label>
             <input type="password" name="current-password" id="current-password">
@@ -60,22 +53,10 @@
             <label for="new-password">New password</label>
             <input type="password" name="new-password" id="new-password">
 
-            <label for="checked-new-password">Repeat new password</label>
-            <input type="password" name="checked-new-password" id="checked-new-password">
+            <label for="check-new-password">Repite new password</label>
+            <input type="password" name="change-password-form" id="change-password-form">
             
-            <button>Change password</button>
-            <button type="button" id="cancel-change-password" onclick="resetToHomeView(homeView, changePasswordForm)">Cancel</button>
-        </form>
-
-        <form id ="change-email-form">
-            <label for="new-email">New email</label>
-            <input type="email" name="new-email" id="new-email">
-
-            <label for="checked-new-email">Repeat new mail</label>
-            <input type="email" name="checked-new-email" id="checked-new-email">
-
-            <button id="send-new-email">Send new email</button>
-            <button type="button" id ="cancel-change-email" onclick="resetToHomeView(homeView, changeMailForm)">Cancel</button>
+            <button type="submit">Change password</button>
         </form>
 
     </div>
