--- a/staff/isabel-dominguez/frontend/app/index.html
+++ b/staff/isabel-dominguez/frontend/app/index.html
@@ -59,6 +59,7 @@
             <input id="confirmPassword" type="password"><br>
     
             <button id="passbuttonchange">Change password ✅</button>
+            <!-- poner el type? -->
         </form>
 
         <button id="changeemail">Change E-mail</button>
@@ -74,6 +75,7 @@
             <input id="confirmNewEmail" type="email"><br>
     
             <button id="emailbuttonchange">Change E-mail ✅</button>
+            <!-- poner el type? -->
         </form>
     </div>
 
