--- a/staff/josem-cembrano/frontend/app-rework/index.html
+++ b/staff/josem-cembrano/frontend/app-rework/index.html
@@ -39,7 +39,7 @@
             <input type="password" id="password">
             <br><br>
             <button>Login</button>
-        </form>
+
         <br><br>
         <a href=""><em>Register</em></a>
     </div>
@@ -56,6 +56,34 @@
             <br><br><br>
             <a href="">Logout</a>
     </div>
+
+    <div id="viewChangeEmail">
+        <h3>Security Settings</h3>
+        <form>
+            <label for="newEmail">•new email</label>
+            <input id="newEmail" type="newEmail">
+            <br>
+            <label for="repeatNewEmail">•repeat new email</label>
+            <input type="repeatNewEmail" id="repeatNewEmail">
+        </form>
+        <br>
+        <a href=""><em>back</em></a>
+    </div>
+
+    <div id="viewChangePassword">
+        <h3>Security Settings</h3>
+        <form>
+            <label for="newPassword">•new password</label>
+            <input id="newPassword" type="newPassword">
+            <br>
+            <label for="repeatNewpassword">•repeat new password</label>
+            <input type="repeatNewpassword" id="repeatNewpassword">
+        </form>
+        <br>
+        <a href=""><em>back</em></a>
+    </div>
+
+
 
     <script src="validators.js"></script>
 
