--- a/staff/eneko-fernandez/frontend/app/index.html
+++ b/staff/eneko-fernandez/frontend/app/index.html
@@ -85,6 +85,7 @@
 
         </div>
 
+        <script src="utils.js"></script>
         <script src="data.js"></script>
         <script src="logic.js"></script>
         <script src="main.js"></script>
