--- a/staff/josem-cembrano/frontend/app-rework/index.html
+++ b/staff/josem-cembrano/frontend/app-rework/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="register">
         <h1>Register</h1>
+        <br><br>
 
         <form>
             <label for="name">Name</label>
@@ -20,15 +21,19 @@
 
             <label for="password">Password</label>
             <input type="password" id="password">
+            <br><br>
 
             <button>Register</button>
         </form>
-
+        <br><br>
         <a href="">Login</a>
     </div>
 
     <div id="login">
+
         <h1>Login</h1>
+
+        <br><br>
 
         <form>
             <label for="email">E-mail</label>
@@ -39,7 +44,7 @@
 
             <button>Login</button>
         </form>
-
+        <br><br>
         <a href="">Register</a>
     </div>
 
@@ -47,6 +52,8 @@
         <h1>Hello, Home!</h1>
 
         <button id="logout-button">Logout</button>
+
+        <br><br>
 
         <form id="change-email-form">
             <label for="new-email">New e-mail</label>
@@ -59,6 +66,21 @@
             <input type="password" id="password">
 
             <button>Update e-mail</button>
+        </form>
+
+        <br><br>
+
+        <form id="change-pass-form">
+            <label for="current-email">Current e-mail</label>
+            <input id="current-email" type="current-email">
+
+            <label for="new-pass">new password</label>
+            <input id="new-pass" type="new-pass">
+
+            <label for="new-pass-confirm">New pass confirm</label>
+            <input type="new-pass-confirm" id="new-pass-confirm">
+
+            <button>Update password</button>
         </form>
 
 
