--- a/staff/anouar-kajaj/frontend/app.2/index.html
+++ b/staff/anouar-kajaj/frontend/app.2/index.html
@@ -21,7 +21,7 @@
             <label for="password">Password</label>
             <input type="password" id="password">
 
-            <input type="checkbox" id="toggle-password">Show Password
+            <input type="checkbox" onclick="showPassword()">Show Password
 
             <button>Register</button>
         </form>
@@ -39,7 +39,7 @@
             <label for="password">Password</label>
             <input type="password" id="password">
 
-            <input type="checkbox" id="toggle-password">Show Password
+            <input type="checkbox" onclick="showPassword()">Show Password
 
             <button>Login</button>
         </form>
