--- a/staff/josem-cembrano/frontend/app-rework/index.html
+++ b/staff/josem-cembrano/frontend/app-rework/index.html
@@ -45,8 +45,13 @@
 
     <div id="home-view">
         <h1>Hello, Home!</h1>
-
+        <br><br><br>
+        <a href="privacy">Privacy Settings</a><br>
+        <br><br>
+        <a href="goHome"><em>Home</em></a>
+        <br><br>
         <button id="logout-button">Logout</button>
+        <br><br>
 
         <form id="change-email-form">
             <label for="new-email-input">New e-mail</label>
@@ -60,7 +65,7 @@
 
             <button>Update e-mail</button>
         </form>
-
+        <br><br>
         <form id="change-password-form">
             <label for="password-input">Current password</label>
             <input type="password" id="password-input">
