edit html and views/home

--- a/staff/josem-cembrano/frontend/app-rework/index.html
+++ b/staff/josem-cembrano/frontend/app-rework/index.html
@@ -48,7 +48,7 @@
         <br><br><br>
         <a href="privacy">Privacy Settings</a><br>
         <br><br>
-        <a href="goHome"><em>Home</em></a>
+        <a class="goHome" href=""><em>Home</em></a>
         <br><br>
         <button id="logout-button">Logout</button>
         <br><br>
