--- a/staff/tano-aleu/frontend/app/index.html
+++ b/staff/tano-aleu/frontend/app/index.html
@@ -7,56 +7,84 @@
     <title>App</title>
 </head>
 
-
 <body>
-     <div id="register">
-          <h1> Register </h1>
-
-          <form>
-               <label for="name">Name</label>
-               <input id="name" type="text">
-
-               <label for="email">E-mail</label>
-               <input id="registerEmail" type="email">
-
-               <label for="password">Password</label>
-               <input id="registerPassword" type="password" >
-
-               <button>Register</button>
-
-          </form>
-
-          <a href="">Login</a>
-
-     </div>    
-
-     <div id="login">
-        <h1> Login </h1>
+    <div id="register-view">
+        <h1>Register</h1>
 
         <form>
-             <label for="email">E-mail</label>
-             <input id="loginEmail" type="email">
+            <label for="name-input">Name</label>
+            <input id="name-input" type="text">
 
-             <label for="password">Password</label>
-             <input id="loginPassword" type="password" >
+            <label for="email-input">E-mail</label>
+            <input id="email-input" type="email">
 
-             <button>Login</button>
+            <label for="password-input">Password</label>
+            <input type="password" id="password-input">
+
+            <button>Register</button>
+        </form>
+
+        <a href="">Login</a>
+    </div>
+
+    <div id="login-view">
+        <h1>Login</h1>
+
+        <form>
+            <label for="email-input">E-mail</label>
+            <input id="email-input" type="email">
+
+            <label for="password-input">Password</label>
+            <input type="password" id="password-input">
+
+            <button>Login</button>
         </form>
 
         <a href="">Register</a>
+    </div>
 
-   </div>    
+    <div id="home-view">
+        <h1>Hello, Home!</h1>
 
-   <div id="home">
+        <button id="logout-button">Logout</button>
 
-    <h1>Homepage</h1>
-    <p id="username"></p>
+        <form id="change-email-form">
+            <label for="new-email-input">New e-mail</label>
+            <input id="new-email-input" type="email">
 
-   </div>
+            <label for="new-email-confirm-input">Confirm new e-mail</label>
+            <input id="new-email-confirm-input" type="email">
 
-   <script src="main.js"></script>
-   <script src="logic.js"></script>
-   <script src="data.js"></script>
+            <label for="password-input">Password</label>
+            <input type="password" id="password-input">
+
+            <button>Update e-mail</button>
+        </form>
+
+        <form id="change-password-form">
+            <label for="password-input">Current password</label>
+            <input type="password" id="password-input">
+
+            <label for="new-password-input">New password</label>
+            <input id="new-password-input" type="password">
+
+            <label for="new-password-confirm-input">Confirm new password</label>
+            <input id="new-password-confirm-input" type="password">
+
+            <button>Update password</button>
+        </form>
+    </div>
+
+
+    <script src="data.js"></script>
+
+    <script src="validators.js"></script>
+    <script src="logic.js"></script>
+
+    <script src="main.js"></script>
+    <script src="views/login.js"></script>
+    <script src="views/register.js"></script>
+    <script src="views/home.js"></script>
 </body>
 
 </html>
