--- a/staff/luis-felipe-garcia/frontend-manu-ver-LF/app/index.html
+++ b/staff/luis-felipe-garcia/frontend-manu-ver-LF/app/index.html
@@ -45,8 +45,41 @@
 
     <div id="home">
         <h1>Hello, Home!</h1>
-    </div>
+        <nav>
+            <ul>
+                <li id="change-email-link"><a href="">Change mail</a></li>
+                <li id="change-password-link"><a href="">Change password</a></li>
+                <li id="logout-link"><a href="">Logout</a></li>
+            </ul>
+        </nav>
+<!--        <button id="logout-button">Logout</button>-->
+        <form id="change-password-form">
+            <label for="current-password">Current password</label>
+            <input type="password" name="current-password" id="current-password">
 
+            <label for="new-password">New password</label>
+            <input type="password" name="new-password" id="new-password">
+
+            <label for="checked-new-password">Repeat new password</label>
+            <input type="password" name="checked-new-password" id="checked-new-password">
+            
+            <button>Change password</button>
+            <button type="button" id="cancel-change-password" onclick="resetToHomeView(homeView, changePasswordForm)">Cancel</button>
+        </form>
+
+        <form id ="change-email-form">
+            <label for="new-email">New email</label>
+            <input type="email" name="new-email" id="new-email">
+
+            <label for="checked-new-email">Repeat new mail</label>
+            <input type="email" name="checked-new-email" id="checked-new-email">
+
+            <button id="send-new-email">Send new email</button>
+            <button type="button" id ="cancel-change-email" onclick="resetToHomeView(homeView, changeMailForm)">Cancel</button>
+        </form>
+
+    </div>
+    <script src="validators.js"></script>
     <script src="data.js"></script>
     <script src="logic.js"></script>
     <script src="main.js"></script>
