--- a/staff/josem-cembrano/frontend/strings/index.html
+++ b/staff/josem-cembrano/frontend/strings/index.html
@@ -13,6 +13,9 @@
 
     <script src="indexOf.js"></script>
     <script src="indexOf.spec.js"></script>
+
+    <script src="lastIndexOf.js"></script>
+    <script src="lastIndexOf.spec.js"></script>
 </body>
 
 </html>
