--- a/staff/isabel-dominguez/frontend/strings/index.html
+++ b/staff/isabel-dominguez/frontend/strings/index.html
@@ -16,6 +16,9 @@
 
     <script src="lastIndexOf.js"></script>
     <script src="lastIndexOf.spec.js"></script>
+
+    <script src="includes.js"></script>
+    <script src="includes.spec.js"></script>
 </body>
 
 </html>
