add strings and arrays standalone functions

--- a/staff/ana-delrio/frontend/strings/index.html
+++ b/staff/ana-delrio/frontend/strings/index.html
@@ -8,11 +8,14 @@
 </head>
 
 <body>
-    <script src="charAt.js"></script>
-    <script src="charAt.spec.js"></script>
-
     <script src="indexOf.js"></script>
     <script src="indexOf.spec.js"></script>
+
+    <script src="lastIndexOf.js"></script>
+    <script src="lastIndexOf.spec.js"></script>
+
+    <script src="includes.js"></script>
+    <script src="includes.spec.js"></script>
 </body>
 
 </html>
